# enigmalang

./: .gitignore  CMakeLists.txt  LICENSE  version.h.in
cmake/: get_version.cmake
example/: test.el
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  logger.h  main.cpp
src/el/: CMakeLists.txt  flags.h  logger.h  main.cpp
src/el/core/lex/: lexer.h
src/tk/: function.h  result.h  singleton.h
